npm/pkg/dataplane/testdata/iptablessave-v2
# Generated by iptables-save v1.6.1 on Wed Mar  9 18:44:07 2022
*filter
:INPUT ACCEPT [1493:404052]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1842:534022]
:AZURE-NPM - [0:0]
:AZURE-NPM-ACCEPT - [0:0]
:AZURE-NPM-EGRESS - [0:0]
:AZURE-NPM-EGRESS-3618314628 - [0:0]
:AZURE-NPM-EGRESS-474303581 - [0:0]
:AZURE-NPM-INGRESS - [0:0]
:AZURE-NPM-INGRESS-474303581 - [0:0]
:AZURE-NPM-INGRESS-ALLOW-MARK - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m conntrack --ctstate NEW -j AZURE-NPM
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A AZURE-NPM -j AZURE-NPM-INGRESS
-A AZURE-NPM -j AZURE-NPM-EGRESS
-A AZURE-NPM -j AZURE-NPM-ACCEPT
-A AZURE-NPM-ACCEPT -m comment --comment CLEAR-AZURE-NPM-MARKS -j MARK --set-xmark 0x0/0xffffffff
-A AZURE-NPM-ACCEPT -j ACCEPT
-A AZURE-NPM-EGRESS -m set --match-set azure-npm-3922407721 src -m set --match-set azure-npm-2854688459 src -m comment --comment "EGRESS-POLICY-x/base-FROM-podlabel-pod:a-AND-ns-x-IN-ns-x" -j AZURE-NPM-EGRESS-474303581
-A AZURE-NPM-EGRESS -m set --match-set azure-npm-4272224941 src -m set --match-set azure-npm-2064349730 src -m comment --comment "EGRESS-POLICY-kube-system/konnectivity-agent-FROM-podlabel-app:konnectivity-agent-AND-ns-kube-system-IN-ns-kube-system" -j AZURE-NPM-EGRESS-3618314628
-A AZURE-NPM-EGRESS -m mark --mark 0x5000 -m comment --comment DROP-ON-EGRESS-DROP-MARK-0x5000 -j DROP
-A AZURE-NPM-EGRESS -m mark --mark 0x2000 -m comment --comment ACCEPT-ON-INGRESS-ALLOW-MARK-0x2000 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-3618314628 -m comment --comment ALLOW-ALL -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-474303581 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2146053937 dst -m set --match-set azure-npm-2682470511 dst -m comment --comment "ALLOW-TO-nslabel-ns:y-AND-nestedlabel-pod:a:b-ON-TCP-TO-PORT-80" -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-474303581 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2095721080 dst -m set --match-set azure-npm-2682470511 dst -m comment --comment "ALLOW-TO-nslabel-ns:z-AND-nestedlabel-pod:a:b-ON-TCP-TO-PORT-80" -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-474303581 -p udp -m udp --dport 53 -m comment --comment ALLOW-ALL-ON-UDP-TO-PORT-53 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-474303581 -p tcp -m tcp --dport 53 -m comment --comment ALLOW-ALL-ON-TCP-TO-PORT-53 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-474303581 -m comment --comment DROP-ALL -j MARK --set-xmark 0x5000/0xffffffff
-A AZURE-NPM-INGRESS -m set --match-set azure-npm-3922407721 dst -m set --match-set azure-npm-2854688459 dst -m comment --comment "INGRESS-POLICY-x/base-TO-podlabel-pod:a-AND-ns-x-IN-ns-x" -j AZURE-NPM-INGRESS-474303581
-A AZURE-NPM-INGRESS -m mark --mark 0x4000 -m comment --comment DROP-ON-INGRESS-DROP-MARK-0x4000 -j DROP
-A AZURE-NPM-INGRESS-474303581 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2129276318 src -m set --match-set azure-npm-55798953 src -m comment --comment "ALLOW-FROM-nslabel-ns:x-AND-nestedlabel-pod:b:c-ON-TCP-TO-PORT-80" -j AZURE-NPM-INGRESS-ALLOW-MARK
-A AZURE-NPM-INGRESS-474303581 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2146053937 src -m set --match-set azure-npm-55798953 src -m comment --comment "ALLOW-FROM-nslabel-ns:y-AND-nestedlabel-pod:b:c-ON-TCP-TO-PORT-80" -j AZURE-NPM-INGRESS-ALLOW-MARK
-A AZURE-NPM-INGRESS-474303581 -m comment --comment DROP-ALL -j MARK --set-xmark 0x4000/0xffffffff
-A AZURE-NPM-INGRESS-ALLOW-MARK -m comment --comment SET-INGRESS-ALLOW-MARK-0x2000 -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-ALLOW-MARK -j AZURE-NPM-EGRESS
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Mar  9 18:44:07 2022
