npm/pkg/dataplane/testdata/iptablesave-v2
# Generated by iptables-save v1.8.4 on Wed Apr  6 21:40:35 2022
*mangle
:PREROUTING ACCEPT [1533177:1877010209]
:INPUT ACCEPT [1533177:1877010209]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1570702:1685965745]
:POSTROUTING ACCEPT [1570702:1685965745]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT
# Completed on Wed Apr  6 21:40:35 2022
# Generated by iptables-save v1.8.4 on Wed Apr  6 21:40:35 2022
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [24:1440]
:POSTROUTING ACCEPT [4:240]
:IP-MASQ-AGENT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2NIF6FXTRQ7OA6YC - [0:0]
:KUBE-SEP-3NUV56XFKXZPQ7VE - [0:0]
:KUBE-SEP-3SWOO5SU5VT2SDH5 - [0:0]
:KUBE-SEP-3UJDMLKHGLQ234DK - [0:0]
:KUBE-SEP-5QKUXKBOY4F32YV4 - [0:0]
:KUBE-SEP-5XQSQOS6AJCWJD6N - [0:0]
:KUBE-SEP-7AE45CCKWVVINGM7 - [0:0]
:KUBE-SEP-7AQJSFXY7KAIDAFV - [0:0]
:KUBE-SEP-AT2RBRUC2OWGQKGK - [0:0]
:KUBE-SEP-B3LOFO5FS34BELSM - [0:0]
:KUBE-SEP-BW5NCMF6XLQD5Z7C - [0:0]
:KUBE-SEP-C7XXPRGNSSBSWYWG - [0:0]
:KUBE-SEP-CDWEJECVN5E77SPS - [0:0]
:KUBE-SEP-CVR74FKCZQHJP6XU - [0:0]
:KUBE-SEP-D6USX3SHHNLDTLZ4 - [0:0]
:KUBE-SEP-DDYYTNCNK2CBJOG6 - [0:0]
:KUBE-SEP-DVITOMBVK5RFH5OV - [0:0]
:KUBE-SEP-ETWZS3IZF4DQ2POO - [0:0]
:KUBE-SEP-FHN6TMGU7I6RJ57I - [0:0]
:KUBE-SEP-FVX5CVUN3WB45Q4V - [0:0]
:KUBE-SEP-I7MXUHVNHNYPDCAQ - [0:0]
:KUBE-SEP-IURBH4FAWBJC7BWV - [0:0]
:KUBE-SEP-IUXBNKRWAAJVMMOE - [0:0]
:KUBE-SEP-J735GZRJA56M7LWN - [0:0]
:KUBE-SEP-JXMN5RTB6IEP2R3G - [0:0]
:KUBE-SEP-KWZXIJAIZ5YW2263 - [0:0]
:KUBE-SEP-LEBM7TWV6SZUR4QC - [0:0]
:KUBE-SEP-OVRAG5AEN2NTOFGR - [0:0]
:KUBE-SEP-PEOIUSAXTKPHXEM7 - [0:0]
:KUBE-SEP-PN3ZWU44T3MZSS7V - [0:0]
:KUBE-SEP-QOWJUALK4DMCSLXZ - [0:0]
:KUBE-SEP-QSIIVWB2QVRHJDF4 - [0:0]
:KUBE-SEP-QTAQH6PLL7NX5JIN - [0:0]
:KUBE-SEP-RCA64DVQ2IHBO65J - [0:0]
:KUBE-SEP-RSZ4G6NR3LZB4KKB - [0:0]
:KUBE-SEP-SWAQUOJ7VTVYZLFG - [0:0]
:KUBE-SEP-U67RV7GEMEZTGOGC - [0:0]
:KUBE-SEP-V23CB5QNTPNGFKTD - [0:0]
:KUBE-SEP-VGJ4OXGG6Y2JYTPD - [0:0]
:KUBE-SEP-W5SW4IQEZMTPSYNG - [0:0]
:KUBE-SEP-WV2EQ2BPABJVR24O - [0:0]
:KUBE-SEP-YIGLVYA6O7DQFF7F - [0:0]
:KUBE-SEP-YJMPROKGBWQ5364M - [0:0]
:KUBE-SEP-ZN2WC5GDKXU7ZF2D - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-24VNCHYOB2X52C2X - [0:0]
:KUBE-SVC-2JOEBGVIBN7STKJK - [0:0]
:KUBE-SVC-3S4YIWM7TJIPODNX - [0:0]
:KUBE-SVC-5OWDM3VLLNBGM5TX - [0:0]
:KUBE-SVC-6QUKZ244WBJIQPL2 - [0:0]
:KUBE-SVC-A5Q7JOQ6EZ6U2DSF - [0:0]
:KUBE-SVC-BE7PK7AJGKHTCEL4 - [0:0]
:KUBE-SVC-BKDYZEC4L2UL4IMK - [0:0]
:KUBE-SVC-BQ3MHMU4NCXF4EXK - [0:0]
:KUBE-SVC-CCXIAI2X5XPGA6LH - [0:0]
:KUBE-SVC-CZKTCEE7X2YRP4IS - [0:0]
:KUBE-SVC-D3LXG2LS52OYEL3B - [0:0]
:KUBE-SVC-D7EDA2TJHHONNNBM - [0:0]
:KUBE-SVC-DJ4J2L6IPYZ4WQRG - [0:0]
:KUBE-SVC-DURNRPMC3MU6HSAU - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-FUWW5BMBVQHZ4M6Z - [0:0]
:KUBE-SVC-G6T3TND64D5NPL53 - [0:0]
:KUBE-SVC-HTSFCVQQUEHP7H27 - [0:0]
:KUBE-SVC-I7YZ4BEHBIRBZRN3 - [0:0]
:KUBE-SVC-IDYN5E57OGBZ447H - [0:0]
:KUBE-SVC-JWKN6CSSHIYY3SV5 - [0:0]
:KUBE-SVC-K4BK4CDIQENF3HWY - [0:0]
:KUBE-SVC-KCRSKJ6PUNXZAQVF - [0:0]
:KUBE-SVC-KGNLBJN4HLTFPI7Z - [0:0]
:KUBE-SVC-KML3S6LDDYEIMJHK - [0:0]
:KUBE-SVC-LES3KET6DL2IL3FT - [0:0]
:KUBE-SVC-MJFOJ62KMLMXY7X4 - [0:0]
:KUBE-SVC-NFY24UBGSSEJRHL2 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-PVTFO465EEPOVL4V - [0:0]
:KUBE-SVC-RJEXVRHLMOGTZJUZ - [0:0]
:KUBE-SVC-RVN6PM2P5UHRSSKN - [0:0]
:KUBE-SVC-SVQKUFZZUX6I6QTN - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XDDJMSFC2RZBVTHX - [0:0]
:KUBE-SVC-XHKKBLVGNCT7FW4G - [0:0]
:KUBE-SVC-XRZMHNSK2RZ45E4Y - [0:0]
:KUBE-SVC-YM56X76GZ3NWP77N - [0:0]
:KUBE-SVC-Z3G5C2S26AICYVIK - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "ip-masq-agent: ensure nat POSTROUTING directs all non-LOCAL destination traffic to our custom IP-MASQ-AGENT chain" -m addrtype ! --dst-type LOCAL -j IP-MASQ-AGENT
-A IP-MASQ-AGENT -d 10.224.0.0/12 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -d 10.224.0.0/16 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -d 10.0.0.0/16 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -m comment --comment "ip-masq-agent: outbound traffic is subject to MASQUERADE (must be last in chain)" -j MASQUERADE
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2NIF6FXTRQ7OA6YC -s 10.224.0.68/32 -m comment --comment "z/s-z-a:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-2NIF6FXTRQ7OA6YC -p tcp -m comment --comment "z/s-z-a:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.68:80
-A KUBE-SEP-3NUV56XFKXZPQ7VE -s 10.224.0.42/32 -m comment --comment "z/s-z-c:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-3NUV56XFKXZPQ7VE -p tcp -m comment --comment "z/s-z-c:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.42:80
-A KUBE-SEP-3SWOO5SU5VT2SDH5 -s 10.224.0.40/32 -m comment --comment "x/s-x-c:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-3SWOO5SU5VT2SDH5 -p tcp -m comment --comment "x/s-x-c:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.40:80
-A KUBE-SEP-3UJDMLKHGLQ234DK -s 10.224.0.20/32 -m comment --comment "x/s-x-b:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-3UJDMLKHGLQ234DK -p udp -m comment --comment "x/s-x-b:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.20:81
-A KUBE-SEP-5QKUXKBOY4F32YV4 -s 10.224.0.66/32 -m comment --comment "kube-system/npm-metrics-cluster-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-5QKUXKBOY4F32YV4 -p tcp -m comment --comment "kube-system/npm-metrics-cluster-service" -m tcp -j DNAT --to-destination 10.224.0.66:10091
-A KUBE-SEP-5XQSQOS6AJCWJD6N -s 10.224.0.23/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-5XQSQOS6AJCWJD6N -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.224.0.23:53
-A KUBE-SEP-7AE45CCKWVVINGM7 -s 10.224.0.69/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-7AE45CCKWVVINGM7 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.224.0.69:53
-A KUBE-SEP-7AQJSFXY7KAIDAFV -s 10.224.0.4/32 -m comment --comment "kube-system/npm-metrics-cluster-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-7AQJSFXY7KAIDAFV -p tcp -m comment --comment "kube-system/npm-metrics-cluster-service" -m tcp -j DNAT --to-destination 10.224.0.4:10091
-A KUBE-SEP-AT2RBRUC2OWGQKGK -s 10.224.0.17/32 -m comment --comment "y/s-y-b:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-AT2RBRUC2OWGQKGK -p tcp -m comment --comment "y/s-y-b:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.17:80
-A KUBE-SEP-B3LOFO5FS34BELSM -s 10.224.0.20/32 -m comment --comment "x/s-x-b:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-B3LOFO5FS34BELSM -p tcp -m comment --comment "x/s-x-b:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.20:80
-A KUBE-SEP-BW5NCMF6XLQD5Z7C -s 10.224.0.40/32 -m comment --comment "x/s-x-c:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-BW5NCMF6XLQD5Z7C -p udp -m comment --comment "x/s-x-c:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.40:81
-A KUBE-SEP-C7XXPRGNSSBSWYWG -s 10.224.0.13/32 -m comment --comment "z/s-z-b:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-C7XXPRGNSSBSWYWG -p tcp -m comment --comment "z/s-z-b:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.13:80
-A KUBE-SEP-CDWEJECVN5E77SPS -s 10.224.0.68/32 -m comment --comment "z/s-z-a:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-CDWEJECVN5E77SPS -p tcp -m comment --comment "z/s-z-a:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.68:81
-A KUBE-SEP-CVR74FKCZQHJP6XU -s 10.224.0.43/32 -m comment --comment "y/s-y-c:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-CVR74FKCZQHJP6XU -p tcp -m comment --comment "y/s-y-c:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.43:81
-A KUBE-SEP-D6USX3SHHNLDTLZ4 -s 10.224.0.42/32 -m comment --comment "z/s-z-c:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-D6USX3SHHNLDTLZ4 -p tcp -m comment --comment "z/s-z-c:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.42:81
-A KUBE-SEP-DDYYTNCNK2CBJOG6 -s 10.224.0.43/32 -m comment --comment "y/s-y-c:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-DDYYTNCNK2CBJOG6 -p tcp -m comment --comment "y/s-y-c:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.43:80
-A KUBE-SEP-DVITOMBVK5RFH5OV -s 10.224.0.17/32 -m comment --comment "y/s-y-b:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-DVITOMBVK5RFH5OV -p udp -m comment --comment "y/s-y-b:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.17:80
-A KUBE-SEP-ETWZS3IZF4DQ2POO -s 10.224.0.87/32 -m comment --comment "x/s-x-a:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-ETWZS3IZF4DQ2POO -p tcp -m comment --comment "x/s-x-a:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.87:80
-A KUBE-SEP-FHN6TMGU7I6RJ57I -s 10.224.0.87/32 -m comment --comment "x/s-x-a:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-FHN6TMGU7I6RJ57I -p udp -m comment --comment "x/s-x-a:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.87:80
-A KUBE-SEP-FVX5CVUN3WB45Q4V -s 10.224.0.69/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-FVX5CVUN3WB45Q4V -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.224.0.69:53
-A KUBE-SEP-I7MXUHVNHNYPDCAQ -s 10.224.0.42/32 -m comment --comment "z/s-z-c:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-I7MXUHVNHNYPDCAQ -p udp -m comment --comment "z/s-z-c:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.42:81
-A KUBE-SEP-IURBH4FAWBJC7BWV -s 10.224.0.20/32 -m comment --comment "x/s-x-b:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-IURBH4FAWBJC7BWV -p tcp -m comment --comment "x/s-x-b:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.20:81
-A KUBE-SEP-IUXBNKRWAAJVMMOE -s 10.224.0.42/32 -m comment --comment "z/s-z-c:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-IUXBNKRWAAJVMMOE -p udp -m comment --comment "z/s-z-c:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.42:80
-A KUBE-SEP-J735GZRJA56M7LWN -s 10.224.0.87/32 -m comment --comment "x/s-x-a:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-J735GZRJA56M7LWN -p tcp -m comment --comment "x/s-x-a:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.87:81
-A KUBE-SEP-JXMN5RTB6IEP2R3G -s 10.224.0.70/32 -m comment --comment "y/s-y-a:service-port-tcp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-JXMN5RTB6IEP2R3G -p tcp -m comment --comment "y/s-y-a:service-port-tcp-80" -m tcp -j DNAT --to-destination 10.224.0.70:80
-A KUBE-SEP-KWZXIJAIZ5YW2263 -s 10.224.0.68/32 -m comment --comment "z/s-z-a:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-KWZXIJAIZ5YW2263 -p udp -m comment --comment "z/s-z-a:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.68:81
-A KUBE-SEP-LEBM7TWV6SZUR4QC -s 10.224.0.13/32 -m comment --comment "z/s-z-b:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-LEBM7TWV6SZUR4QC -p tcp -m comment --comment "z/s-z-b:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.13:81
-A KUBE-SEP-OVRAG5AEN2NTOFGR -s 10.224.0.68/32 -m comment --comment "z/s-z-a:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-OVRAG5AEN2NTOFGR -p udp -m comment --comment "z/s-z-a:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.68:80
-A KUBE-SEP-PEOIUSAXTKPHXEM7 -s 10.224.0.17/32 -m comment --comment "y/s-y-b:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-PEOIUSAXTKPHXEM7 -p tcp -m comment --comment "y/s-y-b:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.17:81
-A KUBE-SEP-PN3ZWU44T3MZSS7V -s 10.224.0.23/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-PN3ZWU44T3MZSS7V -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.224.0.23:53
-A KUBE-SEP-QOWJUALK4DMCSLXZ -s 10.224.0.13/32 -m comment --comment "z/s-z-b:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-QOWJUALK4DMCSLXZ -p udp -m comment --comment "z/s-z-b:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.13:81
-A KUBE-SEP-QSIIVWB2QVRHJDF4 -s 10.224.0.17/32 -m comment --comment "y/s-y-b:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-QSIIVWB2QVRHJDF4 -p udp -m comment --comment "y/s-y-b:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.17:81
-A KUBE-SEP-QTAQH6PLL7NX5JIN -s 10.224.0.40/32 -m comment --comment "x/s-x-c:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-QTAQH6PLL7NX5JIN -p udp -m comment --comment "x/s-x-c:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.40:80
-A KUBE-SEP-RCA64DVQ2IHBO65J -s 10.224.0.43/32 -m comment --comment "y/s-y-c:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-RCA64DVQ2IHBO65J -p udp -m comment --comment "y/s-y-c:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.43:80
-A KUBE-SEP-RSZ4G6NR3LZB4KKB -s 40.64.79.12/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-RSZ4G6NR3LZB4KKB -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 40.64.79.12:443
-A KUBE-SEP-SWAQUOJ7VTVYZLFG -s 10.224.0.13/32 -m comment --comment "z/s-z-b:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-SWAQUOJ7VTVYZLFG -p udp -m comment --comment "z/s-z-b:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.13:80
-A KUBE-SEP-U67RV7GEMEZTGOGC -s 10.224.0.70/32 -m comment --comment "y/s-y-a:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-U67RV7GEMEZTGOGC -p tcp -m comment --comment "y/s-y-a:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.70:81
-A KUBE-SEP-V23CB5QNTPNGFKTD -s 10.224.0.40/32 -m comment --comment "x/s-x-c:service-port-tcp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-V23CB5QNTPNGFKTD -p tcp -m comment --comment "x/s-x-c:service-port-tcp-81" -m tcp -j DNAT --to-destination 10.224.0.40:81
-A KUBE-SEP-VGJ4OXGG6Y2JYTPD -s 10.224.0.20/32 -m comment --comment "x/s-x-b:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-VGJ4OXGG6Y2JYTPD -p udp -m comment --comment "x/s-x-b:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.20:80
-A KUBE-SEP-W5SW4IQEZMTPSYNG -s 10.224.0.35/32 -m comment --comment "kube-system/npm-metrics-cluster-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-W5SW4IQEZMTPSYNG -p tcp -m comment --comment "kube-system/npm-metrics-cluster-service" -m tcp -j DNAT --to-destination 10.224.0.35:10091
-A KUBE-SEP-WV2EQ2BPABJVR24O -s 10.224.0.70/32 -m comment --comment "y/s-y-a:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-WV2EQ2BPABJVR24O -p udp -m comment --comment "y/s-y-a:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.70:81
-A KUBE-SEP-YIGLVYA6O7DQFF7F -s 10.224.0.87/32 -m comment --comment "x/s-x-a:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-YIGLVYA6O7DQFF7F -p udp -m comment --comment "x/s-x-a:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.87:81
-A KUBE-SEP-YJMPROKGBWQ5364M -s 10.224.0.70/32 -m comment --comment "y/s-y-a:service-port-udp-80" -j KUBE-MARK-MASQ
-A KUBE-SEP-YJMPROKGBWQ5364M -p udp -m comment --comment "y/s-y-a:service-port-udp-80" -m udp -j DNAT --to-destination 10.224.0.70:80
-A KUBE-SEP-ZN2WC5GDKXU7ZF2D -s 10.224.0.43/32 -m comment --comment "y/s-y-c:service-port-udp-81" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZN2WC5GDKXU7ZF2D -p udp -m comment --comment "y/s-y-c:service-port-udp-81" -m udp -j DNAT --to-destination 10.224.0.43:81
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.164.41/32 -p udp -m comment --comment "x/s-x-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.164.41/32 -p udp -m comment --comment "x/s-x-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-XDDJMSFC2RZBVTHX
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.82.246/32 -p tcp -m comment --comment "kube-system/npm-metrics-cluster-service cluster IP" -m tcp --dport 9000 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.82.246/32 -p tcp -m comment --comment "kube-system/npm-metrics-cluster-service cluster IP" -m tcp --dport 9000 -j KUBE-SVC-BQ3MHMU4NCXF4EXK
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.46.211/32 -p udp -m comment --comment "y/s-y-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.46.211/32 -p udp -m comment --comment "y/s-y-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-DJ4J2L6IPYZ4WQRG
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.12.157/32 -p udp -m comment --comment "z/s-z-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.12.157/32 -p udp -m comment --comment "z/s-z-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-MJFOJ62KMLMXY7X4
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.144.51/32 -p udp -m comment --comment "z/s-z-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.144.51/32 -p udp -m comment --comment "z/s-z-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-I7YZ4BEHBIRBZRN3
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.214.76/32 -p udp -m comment --comment "y/s-y-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.214.76/32 -p udp -m comment --comment "y/s-y-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-RJEXVRHLMOGTZJUZ
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.169.38/32 -p udp -m comment --comment "z/s-z-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.169.38/32 -p udp -m comment --comment "z/s-z-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-YM56X76GZ3NWP77N
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.144.51/32 -p tcp -m comment --comment "z/s-z-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.144.51/32 -p tcp -m comment --comment "z/s-z-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-PVTFO465EEPOVL4V
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.242.223/32 -p tcp -m comment --comment "y/s-y-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.242.223/32 -p tcp -m comment --comment "y/s-y-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-BKDYZEC4L2UL4IMK
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.87.211/32 -p udp -m comment --comment "x/s-x-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.87.211/32 -p udp -m comment --comment "x/s-x-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-RVN6PM2P5UHRSSKN
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.46.211/32 -p udp -m comment --comment "y/s-y-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.46.211/32 -p udp -m comment --comment "y/s-y-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-KCRSKJ6PUNXZAQVF
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.125.25/32 -p tcp -m comment --comment "x/s-x-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.125.25/32 -p tcp -m comment --comment "x/s-x-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-CCXIAI2X5XPGA6LH
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.164.41/32 -p tcp -m comment --comment "x/s-x-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.164.41/32 -p tcp -m comment --comment "x/s-x-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-G6T3TND64D5NPL53
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.12.157/32 -p tcp -m comment --comment "z/s-z-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.12.157/32 -p tcp -m comment --comment "z/s-z-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-XRZMHNSK2RZ45E4Y
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.87.211/32 -p tcp -m comment --comment "x/s-x-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.87.211/32 -p tcp -m comment --comment "x/s-x-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-BE7PK7AJGKHTCEL4
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.46.211/32 -p tcp -m comment --comment "y/s-y-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.46.211/32 -p tcp -m comment --comment "y/s-y-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-A5Q7JOQ6EZ6U2DSF
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.125.25/32 -p tcp -m comment --comment "x/s-x-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.125.25/32 -p tcp -m comment --comment "x/s-x-a:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-D3LXG2LS52OYEL3B
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.169.38/32 -p tcp -m comment --comment "z/s-z-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.169.38/32 -p tcp -m comment --comment "z/s-z-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-NFY24UBGSSEJRHL2
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.169.38/32 -p udp -m comment --comment "z/s-z-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.169.38/32 -p udp -m comment --comment "z/s-z-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-24VNCHYOB2X52C2X
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.12.157/32 -p tcp -m comment --comment "z/s-z-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.12.157/32 -p tcp -m comment --comment "z/s-z-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-2JOEBGVIBN7STKJK
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.87.211/32 -p udp -m comment --comment "x/s-x-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.87.211/32 -p udp -m comment --comment "x/s-x-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-DURNRPMC3MU6HSAU
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.87.211/32 -p tcp -m comment --comment "x/s-x-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.87.211/32 -p tcp -m comment --comment "x/s-x-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-LES3KET6DL2IL3FT
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.214.76/32 -p udp -m comment --comment "y/s-y-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.214.76/32 -p udp -m comment --comment "y/s-y-b:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-6QUKZ244WBJIQPL2
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.125.25/32 -p udp -m comment --comment "x/s-x-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.125.25/32 -p udp -m comment --comment "x/s-x-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-D7EDA2TJHHONNNBM
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.164.41/32 -p tcp -m comment --comment "x/s-x-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.164.41/32 -p tcp -m comment --comment "x/s-x-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-XHKKBLVGNCT7FW4G
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.164.41/32 -p udp -m comment --comment "x/s-x-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.164.41/32 -p udp -m comment --comment "x/s-x-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-5OWDM3VLLNBGM5TX
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.144.51/32 -p tcp -m comment --comment "z/s-z-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.144.51/32 -p tcp -m comment --comment "z/s-z-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-CZKTCEE7X2YRP4IS
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.144.51/32 -p udp -m comment --comment "z/s-z-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.144.51/32 -p udp -m comment --comment "z/s-z-b:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-3S4YIWM7TJIPODNX
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.242.223/32 -p tcp -m comment --comment "y/s-y-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.242.223/32 -p tcp -m comment --comment "y/s-y-c:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-Z3G5C2S26AICYVIK
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.46.211/32 -p tcp -m comment --comment "y/s-y-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.46.211/32 -p tcp -m comment --comment "y/s-y-a:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-HTSFCVQQUEHP7H27
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.125.25/32 -p udp -m comment --comment "x/s-x-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.125.25/32 -p udp -m comment --comment "x/s-x-a:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-KGNLBJN4HLTFPI7Z
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.169.38/32 -p tcp -m comment --comment "z/s-z-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.169.38/32 -p tcp -m comment --comment "z/s-z-c:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-SVQKUFZZUX6I6QTN
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.12.157/32 -p udp -m comment --comment "z/s-z-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.12.157/32 -p udp -m comment --comment "z/s-z-a:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-K4BK4CDIQENF3HWY
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.242.223/32 -p udp -m comment --comment "y/s-y-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.242.223/32 -p udp -m comment --comment "y/s-y-c:service-port-udp-80 cluster IP" -m udp --dport 80 -j KUBE-SVC-IDYN5E57OGBZ447H
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.242.223/32 -p udp -m comment --comment "y/s-y-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.242.223/32 -p udp -m comment --comment "y/s-y-c:service-port-udp-81 cluster IP" -m udp --dport 81 -j KUBE-SVC-KML3S6LDDYEIMJHK
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.214.76/32 -p tcp -m comment --comment "y/s-y-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.214.76/32 -p tcp -m comment --comment "y/s-y-b:service-port-tcp-80 cluster IP" -m tcp --dport 80 -j KUBE-SVC-JWKN6CSSHIYY3SV5
-A KUBE-SERVICES ! -s 10.224.0.0/16 -d 10.0.214.76/32 -p tcp -m comment --comment "y/s-y-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.0.214.76/32 -p tcp -m comment --comment "y/s-y-b:service-port-tcp-81 cluster IP" -m tcp --dport 81 -j KUBE-SVC-FUWW5BMBVQHZ4M6Z
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-24VNCHYOB2X52C2X -m comment --comment "z/s-z-c:service-port-udp-81" -j KUBE-SEP-I7MXUHVNHNYPDCAQ
-A KUBE-SVC-2JOEBGVIBN7STKJK -m comment --comment "z/s-z-a:service-port-tcp-81" -j KUBE-SEP-CDWEJECVN5E77SPS
-A KUBE-SVC-3S4YIWM7TJIPODNX -m comment --comment "z/s-z-b:service-port-udp-81" -j KUBE-SEP-QOWJUALK4DMCSLXZ
-A KUBE-SVC-5OWDM3VLLNBGM5TX -m comment --comment "x/s-x-c:service-port-udp-80" -j KUBE-SEP-QTAQH6PLL7NX5JIN
-A KUBE-SVC-6QUKZ244WBJIQPL2 -m comment --comment "y/s-y-b:service-port-udp-80" -j KUBE-SEP-DVITOMBVK5RFH5OV
-A KUBE-SVC-A5Q7JOQ6EZ6U2DSF -m comment --comment "y/s-y-a:service-port-tcp-80" -j KUBE-SEP-JXMN5RTB6IEP2R3G
-A KUBE-SVC-BE7PK7AJGKHTCEL4 -m comment --comment "x/s-x-b:service-port-tcp-80" -j KUBE-SEP-B3LOFO5FS34BELSM
-A KUBE-SVC-BKDYZEC4L2UL4IMK -m comment --comment "y/s-y-c:service-port-tcp-81" -j KUBE-SEP-CVR74FKCZQHJP6XU
-A KUBE-SVC-BQ3MHMU4NCXF4EXK -m comment --comment "kube-system/npm-metrics-cluster-service" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-W5SW4IQEZMTPSYNG
-A KUBE-SVC-BQ3MHMU4NCXF4EXK -m comment --comment "kube-system/npm-metrics-cluster-service" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-7AQJSFXY7KAIDAFV
-A KUBE-SVC-BQ3MHMU4NCXF4EXK -m comment --comment "kube-system/npm-metrics-cluster-service" -j KUBE-SEP-5QKUXKBOY4F32YV4
-A KUBE-SVC-CCXIAI2X5XPGA6LH -m comment --comment "x/s-x-a:service-port-tcp-81" -j KUBE-SEP-J735GZRJA56M7LWN
-A KUBE-SVC-CZKTCEE7X2YRP4IS -m comment --comment "z/s-z-b:service-port-tcp-81" -j KUBE-SEP-LEBM7TWV6SZUR4QC
-A KUBE-SVC-D3LXG2LS52OYEL3B -m comment --comment "x/s-x-a:service-port-tcp-80" -j KUBE-SEP-ETWZS3IZF4DQ2POO
-A KUBE-SVC-D7EDA2TJHHONNNBM -m comment --comment "x/s-x-a:service-port-udp-80" -j KUBE-SEP-FHN6TMGU7I6RJ57I
-A KUBE-SVC-DJ4J2L6IPYZ4WQRG -m comment --comment "y/s-y-a:service-port-udp-80" -j KUBE-SEP-YJMPROKGBWQ5364M
-A KUBE-SVC-DURNRPMC3MU6HSAU -m comment --comment "x/s-x-b:service-port-udp-80" -j KUBE-SEP-VGJ4OXGG6Y2JYTPD
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-PN3ZWU44T3MZSS7V
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-FVX5CVUN3WB45Q4V
-A KUBE-SVC-FUWW5BMBVQHZ4M6Z -m comment --comment "y/s-y-b:service-port-tcp-81" -j KUBE-SEP-PEOIUSAXTKPHXEM7
-A KUBE-SVC-G6T3TND64D5NPL53 -m comment --comment "x/s-x-c:service-port-tcp-80" -j KUBE-SEP-3SWOO5SU5VT2SDH5
-A KUBE-SVC-HTSFCVQQUEHP7H27 -m comment --comment "y/s-y-a:service-port-tcp-81" -j KUBE-SEP-U67RV7GEMEZTGOGC
-A KUBE-SVC-I7YZ4BEHBIRBZRN3 -m comment --comment "z/s-z-b:service-port-udp-80" -j KUBE-SEP-SWAQUOJ7VTVYZLFG
-A KUBE-SVC-IDYN5E57OGBZ447H -m comment --comment "y/s-y-c:service-port-udp-80" -j KUBE-SEP-RCA64DVQ2IHBO65J
-A KUBE-SVC-JWKN6CSSHIYY3SV5 -m comment --comment "y/s-y-b:service-port-tcp-80" -j KUBE-SEP-AT2RBRUC2OWGQKGK
-A KUBE-SVC-K4BK4CDIQENF3HWY -m comment --comment "z/s-z-a:service-port-udp-80" -j KUBE-SEP-OVRAG5AEN2NTOFGR
-A KUBE-SVC-KCRSKJ6PUNXZAQVF -m comment --comment "y/s-y-a:service-port-udp-81" -j KUBE-SEP-WV2EQ2BPABJVR24O
-A KUBE-SVC-KGNLBJN4HLTFPI7Z -m comment --comment "x/s-x-a:service-port-udp-81" -j KUBE-SEP-YIGLVYA6O7DQFF7F
-A KUBE-SVC-KML3S6LDDYEIMJHK -m comment --comment "y/s-y-c:service-port-udp-81" -j KUBE-SEP-ZN2WC5GDKXU7ZF2D
-A KUBE-SVC-LES3KET6DL2IL3FT -m comment --comment "x/s-x-b:service-port-tcp-81" -j KUBE-SEP-IURBH4FAWBJC7BWV
-A KUBE-SVC-MJFOJ62KMLMXY7X4 -m comment --comment "z/s-z-a:service-port-udp-81" -j KUBE-SEP-KWZXIJAIZ5YW2263
-A KUBE-SVC-NFY24UBGSSEJRHL2 -m comment --comment "z/s-z-c:service-port-tcp-80" -j KUBE-SEP-3NUV56XFKXZPQ7VE
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-RSZ4G6NR3LZB4KKB
-A KUBE-SVC-PVTFO465EEPOVL4V -m comment --comment "z/s-z-b:service-port-tcp-80" -j KUBE-SEP-C7XXPRGNSSBSWYWG
-A KUBE-SVC-RJEXVRHLMOGTZJUZ -m comment --comment "y/s-y-b:service-port-udp-81" -j KUBE-SEP-QSIIVWB2QVRHJDF4
-A KUBE-SVC-RVN6PM2P5UHRSSKN -m comment --comment "x/s-x-b:service-port-udp-81" -j KUBE-SEP-3UJDMLKHGLQ234DK
-A KUBE-SVC-SVQKUFZZUX6I6QTN -m comment --comment "z/s-z-c:service-port-tcp-81" -j KUBE-SEP-D6USX3SHHNLDTLZ4
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-5XQSQOS6AJCWJD6N
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-7AE45CCKWVVINGM7
-A KUBE-SVC-XDDJMSFC2RZBVTHX -m comment --comment "x/s-x-c:service-port-udp-81" -j KUBE-SEP-BW5NCMF6XLQD5Z7C
-A KUBE-SVC-XHKKBLVGNCT7FW4G -m comment --comment "x/s-x-c:service-port-tcp-81" -j KUBE-SEP-V23CB5QNTPNGFKTD
-A KUBE-SVC-XRZMHNSK2RZ45E4Y -m comment --comment "z/s-z-a:service-port-tcp-80" -j KUBE-SEP-2NIF6FXTRQ7OA6YC
-A KUBE-SVC-YM56X76GZ3NWP77N -m comment --comment "z/s-z-c:service-port-udp-80" -j KUBE-SEP-IUXBNKRWAAJVMMOE
-A KUBE-SVC-Z3G5C2S26AICYVIK -m comment --comment "y/s-y-c:service-port-tcp-80" -j KUBE-SEP-DDYYTNCNK2CBJOG6
COMMIT
# Completed on Wed Apr  6 21:40:35 2022
# Generated by iptables-save v1.8.4 on Wed Apr  6 21:40:35 2022
*filter
:INPUT ACCEPT [4360:1583973]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5668:2831909]
:AZURE-NPM - [0:0]
:AZURE-NPM-ACCEPT - [0:0]
:AZURE-NPM-EGRESS - [0:0]
:AZURE-NPM-EGRESS-2697641196 - [0:0]
:AZURE-NPM-EGRESS-3618314628 - [0:0]
:AZURE-NPM-INGRESS - [0:0]
:AZURE-NPM-INGRESS-2697641196 - [0:0]
:AZURE-NPM-INGRESS-3750705395 - [0:0]
:AZURE-NPM-INGRESS-ALLOW-MARK - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m conntrack --ctstate NEW -j AZURE-NPM
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A AZURE-NPM -j AZURE-NPM-INGRESS
-A AZURE-NPM -j AZURE-NPM-EGRESS
-A AZURE-NPM -j AZURE-NPM-ACCEPT
-A AZURE-NPM-ACCEPT -m comment --comment CLEAR-AZURE-NPM-MARKS -j MARK --set-xmark 0x0/0xffffffff
-A AZURE-NPM-ACCEPT -j ACCEPT
-A AZURE-NPM-EGRESS -m set --match-set azure-npm-3922407721 src -m set --match-set azure-npm-2837910840 src -m comment --comment "EGRESS-POLICY-y/base-FROM-podlabel-pod:a-AND-ns-y-IN-ns-y" -j AZURE-NPM-EGRESS-2697641196
-A AZURE-NPM-EGRESS -m set --match-set azure-npm-4272224941 src -m set --match-set azure-npm-2064349730 src -m comment --comment "EGRESS-POLICY-kube-system/konnectivity-agent-FROM-podlabel-app:konnectivity-agent-AND-ns-kube-system-IN-ns-kube-system" -j AZURE-NPM-EGRESS-3618314628
-A AZURE-NPM-EGRESS -m mark --mark 0x5000 -m comment --comment DROP-ON-EGRESS-DROP-MARK-0x5000 -j DROP
-A AZURE-NPM-EGRESS -m mark --mark 0x2000 -m comment --comment ACCEPT-ON-INGRESS-ALLOW-MARK-0x2000 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-2697641196 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2146053937 dst -m set --match-set azure-npm-5p1pifvksz7fldlldq08 dst -m comment --comment "ALLOW-TO-nslabel-ns:y-AND-nestedlabel-y/test-policy:pod:a:b-ON-TCP-TO-PORT-80" -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-2697641196 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2095721080 dst -m set --match-set azure-npm-5p1pifvksz7fldlldq08 dst -m comment --comment "ALLOW-TO-nslabel-ns:z-AND-nestedlabel-y/test-policy:pod:a:b-ON-TCP-TO-PORT-80" -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-2697641196 -p udp -m udp --dport 53 -m comment --comment ALLOW-ALL-ON-UDP-TO-PORT-53 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-2697641196 -p tcp -m tcp --dport 53 -m comment --comment ALLOW-ALL-ON-TCP-TO-PORT-53 -j AZURE-NPM-ACCEPT
-A AZURE-NPM-EGRESS-2697641196 -m comment --comment DROP-ALL -j MARK --set-xmark 0x5000/0xffffffff
-A AZURE-NPM-EGRESS-3618314628 -m comment --comment ALLOW-ALL -j AZURE-NPM-ACCEPT
-A AZURE-NPM-INGRESS -m set --match-set azure-npm-2064349730 dst -m comment --comment "INGRESS-POLICY-kube-system/default-deny-ingress-TO-ns-kube-system-IN-ns-kube-system" -j AZURE-NPM-INGRESS-3750705395
-A AZURE-NPM-INGRESS -m set --match-set azure-npm-3922407721 dst -m set --match-set azure-npm-2837910840 dst -m comment --comment "INGRESS-POLICY-y/base-TO-podlabel-pod:a-AND-ns-y-IN-ns-y" -j AZURE-NPM-INGRESS-2697641196
-A AZURE-NPM-INGRESS -m mark --mark 0x4000 -m comment --comment DROP-ON-INGRESS-DROP-MARK-0x4000 -j DROP
-A AZURE-NPM-INGRESS-2697641196 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2129276318 src -m set --match-set azure-npm-67n0hp4c1th5oiesg5w0 src -m comment --comment "ALLOW-FROM-nslabel-ns:x-AND-nestedlabel-y/test-policy:pod:b:c-ON-TCP-TO-PORT-80" -j AZURE-NPM-INGRESS-ALLOW-MARK
-A AZURE-NPM-INGRESS-2697641196 -p tcp -m tcp --dport 80 -m set --match-set azure-npm-2146053937 src -m set --match-set azure-npm-67n0hp4c1th5oiesg5w0 src -m comment --comment "ALLOW-FROM-nslabel-ns:y-AND-nestedlabel-y/test-policy:pod:b:c-ON-TCP-TO-PORT-80" -j AZURE-NPM-INGRESS-ALLOW-MARK
-A AZURE-NPM-INGRESS-2697641196 -m comment --comment DROP-ALL -j MARK --set-xmark 0x4000/0xffffffff
-A AZURE-NPM-INGRESS-3750705395 -m comment --comment DROP-ALL -j MARK --set-xmark 0x4000/0xffffffff
-A AZURE-NPM-INGRESS-ALLOW-MARK -m comment --comment SET-INGRESS-ALLOW-MARK-0x2000 -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-ALLOW-MARK -j AZURE-NPM-EGRESS
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.0.52.70/32 -p tcp -m comment --comment "kube-system/metrics-server has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Wed Apr  6 21:40:35 2022
# Generated by iptables-save v1.8.4 on Wed Apr  6 21:40:35 2022
*security
:INPUT ACCEPT [4045:1449077]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3826:1886289]
-A OUTPUT -d 168.63.129.16/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m conntrack --ctstate INVALID,NEW -j DROP
COMMIT
# Completed on Wed Apr  6 21:40:35 2022
